centering and spacing links in banner, fixing position and assigning z index to keep banner while scrolling

--- a/style.css
+++ b/style.css
@@ -3,19 +3,21 @@ body {
     font-family: Arial
 }
 
-
-
 #header{
     background-color: #E6ECFF;
     margin-left: -8px;
     margin-top: -8px;
     width: 100vw;
+    text-align: center;
+    position: fixed;
+    z-index: 1;
 }
-.navbar {
-    background-color: #FFEDB3;
-    width: 100%;
-   
+
+#header a{
+    padding-left: 5%;
+    padding-right: 5%;
 }
+
 .container {
     position: relative;
     max-width: 800px;
@@ -55,7 +57,7 @@ body {
     width: 33%;
     float: left;
     text-align: left;
-    font-size: 12px;
+    font-size: 16px;
     margin-left: auto;
     margin-right: auto;
 }
